--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="https://maven.apache.org/POM/4.0.0" xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.guvi</groupId>
-  <artifactId>demoblaze</artifactId>
+  <artifactId>contactListProj</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <dependencies>
   <dependency>
@@ -21,6 +21,12 @@
     <version>7.11.0</version>
     <scope>test</scope>
 </dependency>
+<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+<dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>5.1.2</version>
+</dependency>
 
 
 <dependency>
@@ -35,15 +41,21 @@
 	    <artifactId>poi-ooxml</artifactId>
 	    <version>5.4.0</version>
 	</dependency>
-	<dependency>
-		<groupId>org.guvi</groupId>
-		<artifactId>GuviAssignment</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-	</dependency>
-	<dependency>
-		<groupId>ExampleMavenProject</groupId>
-		<artifactId>ExampleMavenProject</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-	</dependency>
   </dependencies>
+   <build>
+          <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+            <plugins>
+             <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                <suiteXmlFiles>
+					<suiteXmlFile>testngseq.xml</suiteXmlFile>
+                </suiteXmlFiles>
+               </configuration>
+            </plugin>
+           </plugins>
+         </pluginManagement>
+	    </build>
   </project>
